force-app/main/default/objects/Chorus_Reassignment_Event__e/Chorus_Reassignment_Event__e.object-meta.xml
<CustomObject>
    <label>Chorus Reassignment Event</label>
    <pluralLabel>Chorus Reassignment Events</pluralLabel>
</CustomObject>