force-app/main/default/objects/Chorus_Reassignment_Event__e/fields/Chorus_Id__c.field-meta.xml
<CustomField>
    <fullName>Chorus_Id__c</fullName>
    <label>Chorus Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>