force-app/main/default/objects/Chorus_Reassignment_Event__e/fields/New_Opp_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Opp_Id__c</fullName>
    <label>New Opp Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>