force-app/main/default/objects/Chorus_Reassignment_Event__e/fields/Previous_Opp_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Opp_Id__c</fullName>
    <label>Previous Opp Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>